[package]
name = "zeekscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "zeekscript"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.1", optional = true }
thiserror = "2.0.17"
topiary-core = { version = "0.7.0", default-features = false }
topiary-tree-sitter-facade = { version = "0.7.0", default-features = false }
tree-sitter-zeek = { git = "https://github.com/zeek/tree-sitter-zeek", version = "0.2.9" }

[dev-dependencies]
insta = "1.43.2"

[features]
default = ["python"]
python = ["pyo3"]
