[build-system]
requires = ["setuptools"]

[project]
name = "zeekscript"
dynamic = ["version"]
description = "A Zeek script formatter and analyzer"
readme = "README.md"

classifiers=[
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: BSD License",
    "Topic :: Utilities",
]

keywords = [
    "zeek",
    "scripts",
    "language",
    "formatter",
    "formatting",
    "indenter",
    "indenting",
    "parsing",
]

requires-python = ">= 3.10"

dependencies = [
    "tree-sitter==0.24.0",
    "tree-sitter-zeek==0.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "syrupy==4.8.2",
]

[[project.maintainers]]
name = "The Zeek Project"
email="info@zeek.org"

[project.urls]
Repository = "https://github.com/zeek/zeekscript"

[tool.setuptools]
packages = ["zeekscript"]
script-files = ["zeek-format", "zeek-script"]

[tool.ruff.lint]
select = ["PL", "UP", "RUF", "N", "I"]
ignore = ["PLR0912", "PLR0915", "PLR2004"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "assertEqualContent",
    "assertNotEqualContent",
    "assertFormatting",
    "assertTreeBinary",
    "assertTreeText",
]
