[build-system]
requires = ["setuptools"]

[project]
name = "zeekscript"
dynamic = ["version"]
description = "A Zeek script formatter and analyzer"
readme = "README.md"

classifiers=[
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: BSD License",
    "Topic :: Utilities",
]

keywords = [
    "zeek",
    "scripts",
    "language",
    "formatter",
    "formatting",
    "indenter",
    "indenting",
    "parsing",
]

requires-python = ">= 3.10"

dependencies = [
    "argcomplete>=3.6.1",
    "tree-sitter==0.25.0",
    "tree-sitter-zeek==0.2.9",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-cov>=6.0.0",
    "syrupy==4.9.1",
]

[[project.maintainers]]
name = "The Zeek Project"
email="info@zeek.org"

[project.urls]
Repository = "https://github.com/zeek/zeekscript"

[project.scripts]
zeek-format = "zeekscript.cli:zeek_format"
zeek-script = "zeekscript.cli:zeek_script"

[tool.setuptools]
packages = ["zeekscript"]

[tool.ruff.lint]
select = ["PL", "UP", "RUF", "N", "I", "RET"]
ignore = ["PLR0912", "PLR0915", "PLR2004"]

[tool.ruff.lint.pep8-naming]
extend-ignore-names = [
    "assertEqualContent",
    "assertNotEqualContent",
    "assertFormatting",
    "assertTreeBinary",
    "assertTreeText",
]

[tool.pytest.ini_options]
addopts = "--cov --cov-report html --cov-report term"

[[tool.mypy.overrides]]
module = ["tree_sitter", "tree_sitter_zeek"]
ignore_missing_imports = true
