[package]
name = "format_zeek"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "format_zeek"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.24.0"
thiserror = "2.0.12"
topiary-core = { version = "0.6.0", default-features = false }
topiary-tree-sitter-facade = { version = "0.6.0", default-features = false }
tree-sitter-zeek = { git = "https://github.com/zeek/tree-sitter-zeek", version = "0.2.9" }

[dev-dependencies]
insta = "1.42.2"
